--- a/front-web/src/Navbar/styles.css
+++ b/front-web/src/Navbar/styles.css
@@ -1,12 +1,14 @@
-.main-navbar {
+.main-navbar{
     height: 70px;
-    background-color: #DA5C5C;
+    background-color: #da5c5c;
     padding-left: 45px;
     display: flex;
     align-items: center;
+
 }
 
-.logo-text {
+.logo-text{
+
     font-weight: bold;
     font-size: 24px;
     line-height: 33px;
